--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "adminlte-vue": "^0.1.3",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
