--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.0.0-alpha4",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
@@ -25,14 +26,22 @@
     "yarn": "^1.22.4"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.7.0",
     "@vue/cli-plugin-babel": "~4.4.4",
     "@vue/cli-plugin-eslint": "~4.4.4",
     "@vue/cli-plugin-router": "^4.4.4",
     "@vue/cli-service": "~4.4.4",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.3.1",
     "css-loader": "^3.6.0",
     "eslint": "^7.2.0",
     "eslint-plugin-vue": "^6.2.2",
+    "mutationobserver-shim": "^0.3.3",
+    "popper.js": "^1.16.0",
+    "portal-vue": "^2.1.6",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-bootstrap-vue": "~0.6.0",
     "vue-loader": "^15.9.2",
     "vue-plugin-load-script": "^1.2.0",
     "vue-template-compiler": "^2.6.11",
