--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.0.0-alpha4",
     "bootstrap-vue": "^2.15.0",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "moment": "^2.26.0",
     "postscribe": "^2.0.8",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
+    "vue-chartkick": "^0.6.1",
     "vue-router": "^3.3.4",
     "vue2-admin-lte": "^0.4.3",
     "vuex": "^3.4.0",
