--- a/package.json
+++ b/package.json
@@ -18,22 +18,27 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
+    "leaflet": "^1.8.0",
     "moment": "^2.26.0",
     "postscribe": "^2.0.8",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-chartkick": "^0.6.1",
+    "vue-google-charts": "^1.1.0",
     "vue-router": "^3.3.4",
     "vue2-admin-lte": "^0.4.3",
+    "vue2-gmap-custom-marker": "^6.1.0",
+    "vue2-google-maps": "^0.10.7",
+    "vue2-leaflet": "^2.7.1",
     "vuex": "^3.4.0",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
-    "@vue/cli-plugin-babel": "~4.4.4",
-    "@vue/cli-plugin-eslint": "~4.4.4",
-    "@vue/cli-plugin-router": "^4.4.4",
-    "@vue/cli-service": "~4.4.4",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.6.0",
