--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-chartkick": "^0.6.1",
+    "vue-date-pick": "^1.5.1",
+    "vue-datepicker-ui": "^2.3.0",
     "vue-google-charts": "^1.1.0",
     "vue-router": "^3.3.4",
     "vue2-admin-lte": "^0.4.3",
     "vue2-gmap-custom-marker": "^6.1.0",
     "vue2-google-maps": "^0.10.7",
     "vue2-leaflet": "^2.7.1",
+    "vuejs-datepicker": "^1.6.2",
+    "vuejs-datetimepicker": "^1.1.13",
     "vuex": "^3.4.0",
     "yarn": "^1.22.4"
   },
